--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "synth": "cdk synth"
   },
   "dependencies": {
+    "@aws-cdk/aws-cloudfront": "^1.94.1",
+    "@aws-cdk/aws-iam": "^1.94.1",
+    "@aws-cdk/aws-s3": "^1.94.1",
+    "@aws-cdk/aws-s3-deployment": "^1.94.1",
+    "@aws-cdk/core": "^1.94.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -23,20 +28,15 @@
     "@types/yup": "^0.29.14",
     "aws-cdk-lib": "^2.81.0",
     "axios": "^0.27.2",
+    "constructs": "^10.2.31",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
+    "ts-node": "^10.9.1",
     "yup": "^0.32.11",
-    "@aws-cdk/aws-cloudfront": "^1.94.1",
-    "@aws-cdk/aws-iam": "^1.94.1",
-    "@aws-cdk/aws-s3": "^1.94.1",
-    "@aws-cdk/aws-s3-deployment": "^1.94.1",
-    "@aws-cdk/core": "^1.94.1",
-    "aws-cdk": "^1.94.1",
-    "constructs": "^10.2.31",
-    "ts-node": "^10.9.1"
+    "cdk": "^2.81.0-alpha.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
